--- a/views/result.ejs
+++ b/views/result.ejs
@@ -33,7 +33,7 @@
       <div class="container">
         <div class="navbar-translate">
           <a class="navbar-brand" href="#0"
-            >Info Color
+            >MotoArbitrage
             <div class="ripple-container"></div
           ></a>
           <button
@@ -52,8 +52,8 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <li class="active nav-item">
-              <a href="javascript:;" class="nav-link">
-                Discover
+              <a href="/search" class="nav-link">
+                Search
               </a>
             </li>
             <li class="nav-item">
@@ -64,6 +64,11 @@
             <li class="nav-item">
               <a href="javascript:;" class="nav-link">
                 Settings
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/users/logout" class="nav-link">
+                Logout
               </a>
             </li>
           </ul>
@@ -104,6 +109,12 @@
                             <br />
                             <small class="card-description text-muted"
                               >Price:$<%= data[i].price%></small
+                            >
+                            <br />
+                            <a href="<%= data[i].url  %>">
+                              <small class="card-description text-muted"
+                                >Website:<%= data[i].url%></small
+                              ></a
                             >
                           </h4>
 
