--- a/public/css/material-kit.css
+++ b/public/css/material-kit.css
@@ -66,7 +66,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fafafa;
+  background-color: #f0f8ff;
 }
 
 [tabindex="-1"]:focus {
@@ -487,7 +487,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fafafa;
+  background-color: #f0f8ff;
 }
 
 [tabindex="-1"]:focus {
@@ -9452,7 +9452,7 @@ a.text-dark:focus {
 }
 
 body {
-  background-color: #fff;
+  background-color: #f0f8ff ;
 }
 
 a:focus {
@@ -11589,7 +11589,7 @@ fieldset[disabled][disabled] .btn-group-raised .btn,
 }
 
 body {
-  background-color: #eee;
+  background-color: #f0f8ff ;
   color: #000000;
   font-weight: 300;
 }
@@ -14655,7 +14655,6 @@ textarea {
   border: 0;
   border-radius: 3px;
   padding: 0.625rem 0;
-  margin-bottom: 20px;
   color: #555;
   background-color: #ffffff !important;
   box-shadow: 0 4px 18px 0px rgba(0, 0, 0, 0.12), 0 7px 10px -5px rgba(0, 0, 0, 0.15);
