--- a/views/result.ejs
+++ b/views/result.ejs
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-md-10">
                           <h4 class="card-title">
-                            <a href="<%= data[i].url  %>"
+                            <a href="<%= data[i].url  %>" target="_blank"
                               ><%= data[i].listingName %></a
                             >
 
@@ -111,7 +111,7 @@
                               >Price:$<%= data[i].price%></small
                             >
                             <br />
-                            <a href="<%= data[i].url  %>">
+                            <a href="<%= data[i].url  %>" target="_blank">
                               <small class="card-description text-muted"
                                 >Website:<%= data[i].url%></small
                               ></a
