Added saving and added updateDB again

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -53,8 +53,8 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="javascript:;" class="nav-link">
-                Profile
+              <a href="/users/favorites" class="nav-link">
+                Favorites
               </a>
             </li>
             <li class="nav-item">
