--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -51,12 +51,12 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="active nav-item">
+            <li class="nav-item">
               <a href="/search" class="nav-link">
                 Search
               </a>
             </li>
-            <li class="nav-item">
+            <li class="active nav-item">
               <a href="/users/favorites" class="nav-link">
                 Favorites
               </a>
@@ -86,7 +86,7 @@
                 style="width: 100%; height: 50%;"
               >
                 <thead>
-                  <th>Results for "<%=keyword%>"</th>
+                  <th>Saved Listings</th>
                 </thead>
                 <tbody>
                   <% for(var i=0; i < data.length; i++) { %>
@@ -191,7 +191,7 @@
     data: data,
     dataType    : 'json',
     success: function(data){
-        if(data.type == "error"){
+      if(data.type == "error"){
           alert(data.msg);
         }else if(data.type == "insert"){
           element.find("i")[0].innerHTML= "star"
