Added dashboard and saved listings

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
         <div class="col-lg-4 col-md-6 ml-auto mr-auto">
           <div class="card card-login">
             <form class="form" method="POST" action="users/login">
-              <div class="card-header card-header-primary text-center">
+              <div class="card-header card-header-info text-center">
                 <h4 class="card-title">MotoArbitrage</h4>
               </div>
               <div class="card-body">
@@ -55,10 +55,10 @@
                 </div></span>
               </div>
               <div class="footer text-center">
-                <button type ="submit" class="btn btn-primary">Login</button>
+                <button type ="submit" class="btn btn-info">Login</button>
               </div>
               <div class="footer text-center">
-                <btn id="register-btn" class="btn btn-primary btn-link btn-wd btn-lg">Register</btn>
+                <btn id="register-btn" class="btn btn-info btn-link btn-wd btn-lg">Register</btn>
               </div>
               <%for(var i = 0 ; i < error.length;i++){%>
                 <div class="text-center">
@@ -82,7 +82,7 @@
           <div class="col-lg-4 col-md-6 ml-auto mr-auto">
             <div class="card card-login">
               <form method="POST" action="users/register">
-                <div class="card-header card-header-primary text-center">
+                <div class="card-header card-header-info text-center">
                   <h4 class="card-title">Register</h4>
 
                 </div>
@@ -122,10 +122,10 @@
                   </div></span>
                 </div>
                 <div class="footer text-center">
-                    <button type="submit" class="btn btn-primary">Sign Up</button>
+                    <button type="submit" class="btn btn-info">Sign Up</button>
                   </div>
                   <div class="footer text-center">
-                    <btn id="login-btn" class="btn btn-primary btn-link btn-wd btn-lg">Login here</btn>
+                    <btn id="login-btn" class="btn btn-info btn-link btn-wd btn-lg">Login here</btn>
                   </div>
                   
     
