--- a/views/search.ejs
+++ b/views/search.ejs
@@ -47,6 +47,13 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
+            <%if(user.role == "admin"){%>
+              <li class="nav-item">
+                <a href="/admin/dashboard" class="nav-link">
+                  Dashboard
+                </a>
+              </li>
+            <%}%>
             <li class="active nav-item">
               <a href="/search" class="nav-link">
                 Search
@@ -156,7 +163,7 @@
    
               </div>
               <div class="row">    <div class="mx-auto">
-                <button id="submit-button" type="submit" class="btn btn-primary" disabled="disabled" >
+                <button id="submit-button" type="submit" class="btn btn-info" disabled="disabled" >
                   <span id="submit-button-text" > Submit</span>
                   <div class="loader" style="display:none;"></div>
                 </button>
