--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -51,6 +51,13 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
+            <%if(user.role == "admin"){%>
+              <li class="nav-item">
+                <a href="/admin/dashboard" class="nav-link">
+                  Dashboard
+                </a>
+              </li>
+            <%}%>
             <li class="nav-item">
               <a href="/search" class="nav-link">
                 Search
@@ -173,7 +180,7 @@
 <script>
   $(document).ready(function () {
     $("#example").DataTable({
-      scrollY: "500px",
+      scrollY: "400px",
       scrollCollapse: true,
       paging: false,
     });
