--- a/views/result.ejs
+++ b/views/result.ejs
@@ -51,6 +51,13 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
+            <%if(user.role == "admin"){%>
+              <li class="nav-item">
+                <a href="/admin/dashboard" class="nav-link">
+                  Dashboard
+                </a>
+              </li>
+            <%}%>
             <li class="active nav-item">
               <a href="/search" class="nav-link">
                 Search
@@ -173,7 +180,7 @@
 <script>
   $(document).ready(function () {
     $("#example").DataTable({
-      scrollY: "500px",
+      scrollY: "400px",
       scrollCollapse: true,
       paging: false,
     });
@@ -184,13 +191,14 @@
     var data = {};
     var element = $(this)
     data.listingID = element.attr("data-id")
-    console.log();
+
     $.ajax({
     type        : 'POST',
     url         :  url,
     data: data,
     dataType    : 'json',
     success: function(data){
+      console.log(data);
         if(data.type == "error"){
           alert(data.msg);
         }else if(data.type == "insert"){
