--- a/views/result.ejs
+++ b/views/result.ejs
@@ -69,7 +69,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="javascript:;" class="nav-link">
+              <a href="/users/settings" class="nav-link">
                 Settings
               </a>
             </li>
