--- a/views/search.ejs
+++ b/views/search.ejs
@@ -65,7 +65,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="javascript:;" class="nav-link">
+              <a href="/users/settings" class="nav-link">
                 Settings
               </a>
             </li>
@@ -78,8 +78,7 @@
         </div>
       </div>
     </nav>
-    <div class="main">
-      <div class="container">
+      <div class="container-fluid">
         <div class="section">
           <form method="POST" id="search-form" action="parse">
             <div class="row">
@@ -175,7 +174,6 @@
         </div>
       </div>
 
-    </div>
 
     <!--   Core JS Files   -->
     <script src="../js/core/jquery.min.js" type="text/javascript"></script>
