Working dashboard for users

--- a/public/css/material-kit.css
+++ b/public/css/material-kit.css
@@ -17849,7 +17849,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 }
 
 .togglebutton label input[type="checkbox"]:checked + .toggle {
-  background-color: rgba(156, 39, 176, 0.7);
+  background-color: #00bcd4;
 }
 
 .togglebutton label input[type="checkbox"]:checked + .toggle:after {
