--- a/views/admin/manageUser.ejs
+++ b/views/admin/manageUser.ejs
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
             <%if(user.role == "admin"){%>
-            <li class="nav-item">
+            <li class="active nav-item">
               <a href="/admin/dashboard" class="nav-link">
                 Dashboard
               </a>
@@ -63,7 +63,7 @@
                 Favorites
               </a>
             </li>
-            <li class="active nav-item">
+            <li class="nav-item">
               <a href="/users/settings" class="nav-link">
                 Settings
               </a>
@@ -86,7 +86,12 @@
               <h4 class="card-title">Edit Profile</h4>
             </div>
             <div class="card-body">
-              <form method="POST" action="updateProfile">
+              <form method="POST" action="updateUser">
+                <input
+                  type="hidden"
+                  name="userID"
+                  value="<%=manageUser._id%>"
+                />
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group bmd-form-group">
@@ -95,7 +100,7 @@
                         required
                         type="text"
                         name="firstName"
-                        value="<%=user.firstName%>"
+                        value="<%=manageUser.firstName%>"
                         class="form-control"
                       />
                     </div>
@@ -107,7 +112,7 @@
                         required
                         type="text"
                         name="lastName"
-                        value="<%=user.lastName%>"
+                        value="<%=manageUser.lastName%>"
                         class="form-control"
                       />
                     </div>
@@ -121,7 +126,7 @@
                         disabled
                         type="email"
                         name="email"
-                        value="<%=user.email%>"
+                        value="<%=manageUser.email%>"
                         class="form-control"
                       />
                     </div>
@@ -140,21 +145,81 @@
                     </div>
                   </div>
                 </div>
-                <%for(var i = 0 ; i < error.length;i++){%>
-                <div class="text-center">
-                  <p class="badge badge-danger"><%=error[i]%></p>
+                <div class="row">
+                  <div class="col-md-6">
+                    <%for(var i=0; i < webgroups.length; i++){%>
+                    <%if(manageUser.allowedWebgroups.some(x=>x.group ==
+                    webgroups[i].group)){%>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input
+                          checked
+                          class="form-check-input"
+                          type="checkbox"
+                          name="allowedWebgroups[]"
+                          value="<%=webgroups[i].group%>"
+                        />
+                        <%=webgroups[i].group%>
+                        <span class="form-check-sign">
+                          <span class="check"></span>
+                        </span>
+                      </label>
+                    </div>
+                    <%}else{%>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          name="allowedWebgroups[]"
+                          value="<%=webgroups[i].group%>"
+                        />
+                        <%=webgroups[i].group%>
+                        <span class="form-check-sign">
+                          <span class="check"></span>
+                        </span>
+                      </label>
+                    </div>
+                    <%}%> <%}%>
+                  </div>
+
+                  <%if(manageUser.status == 0){%>
+                  <div class="col-md-6">
+                    <div class="togglebutton">
+                      <label>
+                        <input type="checkbox" name="status" />
+                        <span class="toggle"></span>
+                        Inactive
+                      </label>
+                    </div>
+                  </div>
+                  <%}else if(manageUser.status == 1){%>
+                  <div class="col-md-6">
+                    <div class="togglebutton">
+                      <label>
+                        <input type="checkbox" name="status" checked="" />
+                        <span class="toggle"></span>
+                        Active
+                      </label>
+                    </div>
+                  </div>
+                  <%}%>
                 </div>
 
-                <%}%> <%for(var i = 0 ; i < message.length;i++){%>
-                <div class="text-center">
-                  <p class="badge badge-success"><%=message[i]%></p>
-                </div>
-                <%}%>
                 <button type="submit" class="btn btn-info pull-right">
                   Update Profile
                 </button>
-                <div class="clearfix"></div>
               </form>
+              <%for(var i = 0 ; i < error.length;i++){%>
+              <div class="text-center">
+                <p class="badge badge-danger"><%=error[i]%></p>
+              </div>
+
+              <%}%> <%for(var i = 0 ; i < message.length;i++){%>
+              <div class="text-center">
+                <p class="badge badge-success"><%=message[i]%></p>
+              </div>
+              <%}%>
             </div>
           </div>
         </div>
