--- a/views/search.ejs
+++ b/views/search.ejs
@@ -78,101 +78,85 @@
         </div>
       </div>
     </nav>
-      <div class="container-fluid">
-        <div class="section">
-          <form method="POST" id="search-form" action="parse">
-            <div class="row">
-              <div class="form-group col-md-6 mx-auto">
-                  <span>
-                <div class="input-group-prepend"><span>Search Keyword</span></div>
-                <input required
-                  type="text"
-                  class="form-control"
-                  name="keyword"
-                  placeholder=""
-                />
-                
-              </div>
+    <br/>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 mx-auto">
+          <div class="card">
+            <div class="card-header card-header-info">
+              <h4 class="card-title text-center">Search</h4>
             </div>
-            <div class="row">
-                <div class="form-group col-md-3 offset-3">
-                    <span>
-                  <div class="input-group-prepend"><span>Referrence Price(Optional)</span></div>
-                  <input
-                    type="number"
-                    name="refPrice"
-                    class="form-control"
-                    placeholder="0"
-             
-                  />
+            <div class="card-body">
+              <form method="POST" id="search-form" action="parse">
+                <div class="row">
+                  <div class="form-group col-md-12">
+                      <span>
+                    <div class="input-group-prepend text-center"><span>Search Keyword</span></div>
+                    <input required
+                      type="text"
+                      class="form-control"
+                      name="keyword"
+                      placeholder=""
+                    />
+                    
+                  </div>
                 </div>
-                <div class="form-group col-md-3">
-                    <span>
-                  <div class="input-group-prepend"><span>% Under Referrence(Optional)</span></div>
-                  <input
-                    type="number"
-                    class="form-control"
-                    placeholder="0"
-                    name="refPercent"
-                  />
-                </div>
-              </div>
-
-            
-              <div class="row col-md-6 mx-auto">
-                <ul>
-                  <li>
+                <div class="row">
+                    <div class="form-group col-md-6">
+                        <span>
+                      <div class="input-group-prepend"><span>Referrence Price(Optional)</span></div>
+                      <input
+                        type="number"
+                        name="refPrice"
+                        class="form-control"
+                        placeholder="0"
+                 
+                      />
+                    </div>
+                    <div class="form-group col-md-6">
+                        <span>
+                      <div class="input-group-prepend"><span>% Under Referrence(Optional)</span></div>
+                      <input
+                        type="number"
+                        class="form-control"
+                        placeholder="0"
+                        name="refPercent"
+                      />
+                    </div>
+                  </div>
+                  
+                
+                  <div class="row">
+                    <div class="col-md-6">
+                      <%for(var i =0 ; i < user.allowedWebgroups.length ; i++){%>
                         <div class="form-check">
-                        <label class="form-check-label">
-                          <input class="form-check-input" type="checkbox" name="websitesChecked" checked="true" value="usedca">
-                          usedca.com
-                          <span class="form-check-sign">
-                            <span class="check"></span>
-                          </span>
-                        </label>
-                      </div>
-                  </li>
-           
-                  <li>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input class="form-check-input" type="checkbox" name="websitesChecked" checked="true" value="kijiji">
-                        kijiji.com
-                        <span class="form-check-sign">
-                          <span class="check"></span>
-                        </span>
-                      </label>
+                          <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox" name="websitesChecked" checked="true" value="<%=user.allowedWebgroups[i].group%>">
+                            <%=user.allowedWebgroups[i].group%>
+                            <span class="form-check-sign">
+                              <span class="check"></span>
+                            </span>
+                          </label>
+                        </div>
+                      <%}%>
                     </div>
-                  </li>
-           
-                  <li>
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input class="form-check-input" type="checkbox" name="websitesChecked" checked="true" value="autotrader">
-                        autotrader.ca
-                        <span class="form-check-sign">
-                          <span class="check"></span>
-                        </span>
-                      </label>
-                    </div>
-                  </li>
-                  </ul>
-                  <ul>
-                    </ul>
-   
-              </div>
-              <div class="row">    <div class="mx-auto">
-                <button id="submit-button" type="submit" class="btn btn-info" disabled="disabled" >
-                  <span id="submit-button-text" > Submit</span>
-                  <div class="loader" style="display:none;"></div>
-                </button>
-              </div></div>
-  
-        
+                  </div>
+                  <div class="row">    <div class="mx-auto">
+                    <button id="submit-button" type="submit" class="btn btn-info" disabled="disabled" >
+                      <span id="submit-button-text" > Submit</span>
+                      <div class="loader" style="display:none;"></div>
+                    </button>
+                  </div></div>
+      
+            
+    
+              </form>
 
-          </form>
+            </div>
+          </div>
         </div>
       </div>
+    </div>
 
 
     <!--   Core JS Files   -->
